Changed animation for the second page. Fixed a margin issue on mobile.

--- a/main.scss
+++ b/main.scss
@@ -312,6 +312,7 @@ hr {
     html {font-family: $secondary-font; font-size: 0.6rem; line-height: 1em;}
     #homeTitle {font-size: 5rem; text-shadow: #b73785 3px 2px;}
     #contactEmail, #contactPhone, #gitLink, #about {text-shadow: black 1px 1px;}
+    .cell {margin: 2em 0em 1em 4em;}
     #aboutContainer {margin: 5em 1em 0 1em;}
     #aboutPage {height: 70vh;}
     #aboutPanel {padding-bottom: 2em;}
